# catalyst-node-rust

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  catalyst.toml  dockerfile  file_tree.txt  makefile  node.key  rust-toolchain.toml  rustfmt.toml  setup.sh  tree.txt
crates/catalyst-cli/: Cargo.toml  README.md  network_keypair
crates/catalyst-cli/dev_catalyst_data/: 000008.sst  IDENTITY  LOG  LOG.old.1755941913273980  LOG.old.1755943954184249  LOG.old.1755947457638531  LOG.old.1755949211140955  LOG.old.1755950747614985  LOG.old.1755951856272370  LOG.old.1755952980085210  LOG.old.1756073273205342  LOG.old.1756078293164752  LOG.old.1756143090322221  MANIFEST-000014  MANIFEST-000026  MANIFEST-000030  MANIFEST-000038  OPTIONS-000012
crates/catalyst-cli/src/: alerting.rs  checkpoint.rs  clock_skew_tests.rs  commands.rs  config.rs  consensus_limits.rs  dfs_store.rs  evm.rs  evm_revm.rs  fork_choice.rs  identity.rs  main.rs  node.rs  pruning.rs  sync.rs  tx.rs  tx_batch_p2p.rs
crates/catalyst-config/: Cargo.toml  README.md
crates/catalyst-config/configs/: devnet.toml  example.toml  mainnet.toml  public_testnet.toml
crates/catalyst-config/examples/: basic_usage.rs  env_override.rs  hot_reload.rs
crates/catalyst-config/src/: consensus.rs  error.rs  lib.rs  network.rs  node.rs  runtime.rs  storage.rs  utils.rs
crates/catalyst-config/src/config/: catalyst.rs  consensus.rs  crypto.rs  logging.rs  metrics.rs  mod.rs  network.rs  service_bus.rs  storage.rs
crates/catalyst-config/src/hot_reload/: events.rs  mod.rs  watcher.rs
crates/catalyst-config/src/loader/: env.rs  file.rs  mod.rs  validation.rs
crates/catalyst-config/src/networks/: devnet.rs  mainnet.rs  mod.rs  testnet.rs
crates/catalyst-config/tests/: integration_tests.rs  network_tests.rs  validation_tests.rs
crates/catalyst-consensus/: Cargo.toml  README.md
crates/catalyst-consensus/examples/: basic_consensus.rs  simple_consensus.rs
crates/catalyst-consensus/src/: consensus.rs  convergence_test_support.rs  error.rs  lib.rs  lsu_finality.rs  phases.rs  producer.rs  state_root_finality.rs  tests.rs  types.rs
crates/catalyst-consensus/tests/: convergence_harness.rs
crates/catalyst-core/: Cargo.toml
crates/catalyst-core/examples/: print_test_vectors.rs
crates/catalyst-core/src/: error.rs  events.rs  lib.rs  protocol.rs  traits.rs  types.rs
crates/catalyst-core/src/runtime/: mod.rs
crates/catalyst-core/tests/: test_vectors.rs  wire_vectors.rs
crates/catalyst-crypto/: Cargo.toml  README.md
crates/catalyst-crypto/benches/: crypto_benchmarks.rs
crates/catalyst-crypto/examples/: basic_usage.rs
crates/catalyst-crypto/src/: commitment.rs  commitments.rs  errors.rs  hash.rs  keys.rs  lib.rs  merkle.rs  proofs.rs  signature.rs  signatures.rs  txauth.rs  utils.rs
crates/catalyst-crypto/tests/: integration_tests.rs
crates/catalyst-dfs/: Cargo.toml  README.md
crates/catalyst-dfs/benches/: dfs_benchmarks.rs
crates/catalyst-dfs/examples/: basic_usage.rs
crates/catalyst-dfs/src/: ipfs.rs  lib.rs  networked.rs  provider.rs  storage.rs  swarm.rs
crates/catalyst-dfs/tests/: integration.rs
crates/catalyst-network/: Cargo.toml  README.md  network_keypair
crates/catalyst-network/benches/: network_benchmarks.rs
crates/catalyst-network/src/: bandwidth.rs  config.rs  discovery.rs  error.rs  gossip.rs  gossip_sim.rs  lib.rs  messaging.rs  metrics.rs  monitoring.rs  protocol_identify.rs  reputation.rs  security.rs  service.rs  simple.rs  swarm.rs  tcp_test_mesh.rs
crates/catalyst-network/tests/: tcp_batch_drop.rs
crates/catalyst-node/: Cargo.toml  README.md
crates/catalyst-node/catalyst_data/: 000008.sst  IDENTITY  LOG  LOG.old.1755941913557886  LOG.old.1755949211568440  MANIFEST-000005  MANIFEST-000014  OPTIONS-000016
crates/catalyst-node/dev_catalyst_data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
crates/catalyst-node/examples/: real_consensus_example.rs
crates/catalyst-node/src/: block_production.rs  consensus_service.rs  lib.rs
crates/catalyst-node/tests/: consensus_tests.rs  simple_consensus_test.rs
crates/catalyst-rpc/: Cargo.toml  README.md
crates/catalyst-rpc/src/: lib.rs  methods.rs  server.rs  types.rs
crates/catalyst-rpc/tests/: client_tests.rs
crates/catalyst-runtime-evm/: Cargo.toml  README.md
crates/catalyst-runtime-evm/benches/: evm_execution.rs
crates/catalyst-runtime-evm/examples/: batch_execution.rs  cross_runtime_call.rs  deploy_contract.rs  simple_transfer.rs
crates/catalyst-runtime-evm/src/: database.rs  execution.rs  lib.rs  precompiles.rs  types.rs
crates/catalyst-runtime-evm/tests/: integration.rs
crates/catalyst-runtime-svm/: Cargo.toml
crates/catalyst-runtime-svm/src/: lib.rs  native.rs  runtime.rs
crates/catalyst-service-bus/: Cargo.toml  README.md
crates/catalyst-service-bus/examples/: basic_client.rs  server.rs
crates/catalyst-service-bus/src/: auth.rs  client.rs  config.rs  error.rs  events.rs  filters.rs  lib.rs  reset.rs  server.rs  websocket.rs
crates/catalyst-storage/: Cargo.toml  README.md
crates/catalyst-storage/catalyst_data/: 000008.sst  000009.sst  000014.sst  000019.sst  000024.sst  000031.sst  000036.sst  IDENTITY  LOG  LOG.old.1768779303058870  LOG.old.1768779579890085  LOG.old.1768896227633059  LOG.old.1768920211945001  LOG.old.1768951337600338  LOG.old.1768952843736489  MANIFEST-000005  MANIFEST-000016  MANIFEST-000026  MANIFEST-000038  OPTIONS-000007  OPTIONS-000018
crates/catalyst-storage/src/: config.rs  engine.rs  error.rs  lib.rs  manager.rs  merkle.rs  metrics.rs  migration.rs  snapshot.rs  sparse_merkle.rs  transaction.rs  utils.rs
crates/catalyst-utils/: Cargo.toml  README.md
crates/catalyst-utils/docs/: API.md  GETTING_STARTED.md
crates/catalyst-utils/examples/: basic_usage.rs  logging_example.rs  metrics_example.rs  serialization_example.rs
crates/catalyst-utils/src/: error.rs  lib.rs  logging.rs  metrics.rs  network.rs  patterns.rs  serialization.rs  state.rs  utils.rs
crates/catalyst-utils/tests/: comprehensive_utils_tests.rs  omprehensive_utils_tests.rs
(+195 files in other folders)
