[workspace]
resolver = "2"
members = [
    "crates/catalyst-core",
    "crates/catalyst-consensus", 
    "crates/catalyst-storage",
    "crates/catalyst-network",
    "crates/catalyst-runtime-evm",
    "crates/catalyst-runtime-svm", 
    "crates/catalyst-service-bus",
    "crates/catalyst-dfs",
    "crates/catalyst-crypto",
    "crates/catalyst-cli",
    "crates/catalyst-rpc",
    "crates/catalyst-config",
    "crates/catalyst-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Catalyst Network Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/catalyst-network/catalyst-node"
homepage = "https://catalyst.network"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
curve25519-dalek = "4.1"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
blake2 = "0.10"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"

# Networking
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "kad"] }
quinn = "0.10"

# Database/Storage
rocksdb = "0.21"
sled = "0.34"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"

# IPFS integration
ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-rustls"] }

# EVM integration (placeholder - will need specific EVM crate)
# revm = "3.5"

# WebSocket for service bus
tokio-tungstenite = "0.20"

# HTTP server
axum = "0.7"
tower = "0.4"
hyper = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true