[workspace]
members = [
     "crates/catalyst-core",
     "crates/catalyst-crypto", 
     "crates/catalyst-consensus",
     "crates/catalyst-network",
     "crates/catalyst-config",
     "crates/catalyst-utils",
     "crates/catalyst-storage",
     "crates/catalyst-runtime-evm",
   #  "crates/catalyst-runtime-svm",
     "crates/catalyst-dfs",
     "crates/catalyst-service-bus",
     "crates/catalyst-rpc",
     "crates/catalyst-node",
     "crates/catalyst-cli",
     "rpc-test", "crates/catalyst-node",
]

resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"

# Networking
libp2p = { version = "0.53", features = ["kad", "request-response"] }

# Utilities
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"

# Configuration
toml = "0.8"
