# Root workspace Cargo.toml
[workspace]
members = [
    "crates/catalyst-cli",
    "crates/catalyst-config",
    "crates/catalyst-consensus",
    "crates/catalyst-core",
    "crates/catalyst-crypto",
    "crates/catalyst-dfs",
    "crates/catalyst-network",
    "crates/catalyst-rpc",
    "crates/catalyst-runtime-evm",
    "crates/catalyst-runtime-svm",
    "crates/catalyst-service-bus",
    "crates/catalyst-storage",
    "crates/catalyst-utils",
]
resolver = "2"

# Centralized dependency management
[workspace.dependencies]
# Database - Use consistent version across workspace
rocksdb = "0.22"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# IPFS and content addressing
cid = "0.10"
multihash = "0.19"

# Networking with libp2p
libp2p = { version = "0.53", features = [
    "kad",
    "request-response",
    "gossipsub",
    "identify",
    "noise",
    "tcp",
    "yamux",
    "mdns",
    "ping",
    "tokio",
    "macros"
] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Development dependencies
tempfile = "3.0"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Profile settings for the entire workspace
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
debug = true
opt-level = 3