[package]
name = "catalyst-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "catalyst-node"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Catalyst crates - only include what we actually use
catalyst-core = { path = "../catalyst-core" }
catalyst-config = { path = "../catalyst-config" }
catalyst-node = { path = "../catalyst-node" }
catalyst-rpc = { path = "../catalyst-rpc" }

# HTTP client for status checks
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

# Error handling and serialization
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }