[package]
name = "catalyst-cli"
version = "0.1.0"
edition = "2021"
authors = ["Catalyst Network Team"]
description = "Command line interface for Catalyst Network"
license = "MIT"

[[bin]]
name = "catalyst-cli"
path = "src/main.rs"

[dependencies]
# Core Catalyst dependencies
catalyst-core = { path = "../catalyst-core" }
catalyst-config = { path = "../catalyst-config" }
catalyst-consensus = { path = "../catalyst-consensus" }
catalyst-network = { path = "../catalyst-network" }
catalyst-rpc = { path = "../catalyst-rpc" }
catalyst-storage = { path = "../catalyst-storage" }
catalyst-crypto = { path = "../catalyst-crypto" }
catalyst-utils = { path = "../catalyst-utils" }
catalyst-dfs = { path = "../catalyst-dfs" }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
bincode = "1.3"
blake2 = "0.10"

# Async runtime
futures = "0.3"
jsonrpsee = { version = "0.21", features = ["http-client"] }

[features]
default = []
dev = []