[package]
name = "catalyst-cli"
version = "0.1.0"
edition = "2021"
authors = ["Catalyst Network Team"]
description = "Command line interface for Catalyst Network"
license = "MIT"

[[bin]]
name = "catalyst-cli"
path = "src/main.rs"

[dependencies]
# Core Catalyst dependencies
catalyst-core = { path = "../catalyst-core" }
catalyst-config = { path = "../catalyst-config" }
catalyst-consensus = { path = "../catalyst-consensus" }
catalyst-network = { path = "../catalyst-network" }
catalyst-rpc = { path = "../catalyst-rpc" }
catalyst-storage = { path = "../catalyst-storage" }
catalyst-crypto = { path = "../catalyst-crypto" }
catalyst-utils = { path = "../catalyst-utils" }
catalyst-dfs = { path = "../catalyst-dfs" }
catalyst-runtime-evm = { path = "../catalyst-runtime-evm" }
alloy-primitives = { version = "1.2", features = ["serde"] }
revm = { version = "27", default-features = true }
thiserror = "1.0"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
bincode = "1.3"
blake2 = "0.10"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"

# Async runtime
futures = "0.3"
jsonrpsee = { version = "0.21", features = ["http-client"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"], default-features = false }
tar = "0.4.44"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
tokio-util = { workspace = true, features = ["io"] }
hickory-resolver = "0.25.2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
dev = []
