[package]
name = "catalyst-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []