[package]
name = "catalyst-consensus"
version = "0.1.0"
edition = "2021"
description = "4-Phase Collaborative Consensus for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
# Core Catalyst dependencies
catalyst-network = { path = "../catalyst-network" }
catalyst-crypto = { path = "../catalyst-crypto" }
# catalyst-utils = { path = "../catalyst-utils" }  # Add when available
# catalyst-config = { path = "../catalyst-config" }  # Add when available

# Async support
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"


# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
testing = []
full-consensus = []  # For future advanced features