[package]
name = "catalyst-consensus"
version = "0.1.0"
edition = "2021"
description = "4-Phase Collaborative Consensus for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
# Core Catalyst dependencies
catalyst-network = { path = "../catalyst-network" }
catalyst-crypto = { path = "../catalyst-crypto" }
catalyst-core = { path = "../catalyst-core" }
catalyst-utils = { path = "../catalyst-utils" }
catalyst-config = { path = "../catalyst-config" }

# Async support
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
rand = "0.8"
blake2 = "0.10"
indexmap = "2.2"

# Cryptography - only for examples, main code should use catalyst-crypto
curve25519-dalek = { version = "4.1", features = ["rand_core"] }

[dev-dependencies]
catalyst-core = { path = "../catalyst-core" }
catalyst-utils = { path = "../catalyst-utils" }
catalyst-crypto = { path = "../catalyst-crypto" }
catalyst-config = { path = "../catalyst-config" }
catalyst-storage = { path = "../catalyst-storage" }
catalyst-network = { path = "../catalyst-network" }
catalyst-runtime-evm = { path = "../catalyst-runtime-evm" }
catalyst-dfs = { path = "../catalyst-dfs" }
catalyst-service-bus = { path = "../catalyst-service-bus" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
bincode = "1.3"

[features]
default = []
# Build examples only when explicitly enabled (keeps `cargo test --workspace` green while APIs churn).
examples = []

[[example]]
name = "basic_consensus"
path = "examples/basic_consensus.rs"
required-features = ["examples"]

[[example]]
name = "simple_consensus"
path = "examples/simple_consensus.rs"
required-features = ["examples"]