[package]
name = "catalyst-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
# Async programming
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID for node identification
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptographic utilities
hex = "0.4"
blake2 = "0.10"

# Utilities
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
testing = []