[package]
name = "catalyst-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
# Core cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
curve25519-dalek = "4.1"
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
zkp = []  # Zero-knowledge proofs (future feature)
bulletproofs = []  # Range proofs (future feature)