[package]
name = "catalyst-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
blake2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
subtle = "2.5"
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }