[package]
name = "catalyst-dfs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "1.0"

# Local crate dependencies
catalyst-utils = { path = "../catalyst-utils" }
catalyst-core = { path = "../catalyst-core" }

# Storage - commented out for now
# rocksdb = "0.22"

# Networking - DISABLED FOR NOW
# libp2p = { version = "0.54", features = ["gossipsub", "kad", "identify", "noise", "tcp", "request-response"] }
# cid = "0.10"
# multihash = "0.18"

[features]
default = ["local-only"]
local-only = []
networking = []  # Disabled until libp2p issues are resolved