[package]
name = "catalyst-dfs"
version = "0.1.0"
edition = "2021"

# Prevent Cargo from auto-discovering & compiling examples/tests for this crate.
autoexamples = false
autotests    = false
autobenches  = false

[features]
# Enable HTTP calls to an IPFS daemon (Kubo) at `DfsConfig.ipfs_api`.
ipfs-http = ["dep:reqwest", "dep:serde_json"]

[dependencies]
# Local crates
catalyst-utils = { path = "../catalyst-utils" }
catalyst-core  = { path = "../catalyst-core" }

# Core deps
async-trait = "0.1"
bytes       = "1"
parking_lot = "0.12"
serde       = { version = "1", features = ["derive"] }
thiserror   = "1"
tokio       = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

# Content addressing
cid                  = "0.11.1"
multihash            = "0.19.3"
multihash-codetable  = { version = "0.1.3", features = ["sha2"] }

# Optional HTTP client for ipfs-http feature
reqwest    = { version = "0.11", features = ["json", "multipart", "stream"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
futures  = "0.3"
tempfile = "3"
env_logger = "0.10"
