[package]
name = "catalyst-network"
version = "0.1.0"
edition = "2021"
description = "Networking layer for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
catalyst-core = { path = "../catalyst-core" }

# Networking
libp2p = { version = "0.53", features = ["kad", "request-response", "tcp", "noise", "yamux", "mdns", "serde"] }

# Async support
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
full-network = ["libp2p/gossipsub", "libp2p/identify"]