[package]
name = "catalyst-network"
version = "0.1.0"
edition = "2021"
authors = ["Catalyst Network Team"]
description = "P2P networking layer for Catalyst Network blockchain"
license = "MIT OR Apache-2.0"
repository = "https://github.com/catalyst-network/catalyst-node-rust"
keywords = ["blockchain", "p2p", "networking", "catalyst"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Core Catalyst dependencies
catalyst-utils = { path = "../catalyst-utils" }
catalyst-crypto = { path = "../catalyst-crypto" }
catalyst-config = { path = "../catalyst-config" }

# Basic networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Metrics (optional)
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["metrics"]
metrics = ["prometheus"]