[package]
name = "catalyst-rpc"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC server for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
catalyst-core = { path = "../catalyst-core" }
catalyst-storage = { path = "../catalyst-storage" }
catalyst-network = { path = "../catalyst-network" }
catalyst-utils = { path = "../catalyst-utils" }
tracing = "0.1"

# JSON-RPC
jsonrpsee = { version = "0.21", features = ["server", "macros"] }

# HTTP server
hyper = "1.0"
tower = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
log = "0.4"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"