[package]
name = "catalyst-runtime-evm"
version = "0.1.0"
edition = "2021"
description = "Ethereum Virtual Machine runtime for Catalyst Network"
license = "MIT OR Apache-2.0"
authors = ["Catalyst Team"]
repository = "https://github.com/catalyst-network/catalyst-node-rust"
documentation = "https://docs.rs/catalyst-runtime-evm"
readme = "README.md"
keywords = ["blockchain", "evm", "ethereum", "catalyst", "runtime"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
# Core Catalyst dependencies
catalyst-core = { path = "../catalyst-core" }

# EVM implementation - use compatible versions
revm = { version = "3.5", default-features = false, features = ["std", "serde"] }
revm-primitives = { version = "1.3", default-features = false, features = ["std", "serde"] }

# Ethereum types and utilities
ethereum-types = "0.14"
ethabi = "18.0"
rlp = "0.5"

# Cryptographic functions
sha3 = "0.10"
keccak-hash = "0.10"

# Async support
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.0"
env_logger = "0.10"

[features]
default = ["std"]
std = ["revm/std", "revm-primitives/std"]

# Optional features for advanced functionality
optimism = ["revm/optimism"]
ethereum-tests = []
debug-mode = []

# Catalyst-specific features
cross-runtime = []
confidential-tx = []
dfs-integration = []

[[bench]]
name = "evm_execution"
harness = false

[[example]]
name = "deploy_contract"
required-features = ["std"]

[[example]]
name = "cross_runtime_call"
required-features = ["cross-runtime"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]