[package]
name = "catalyst-runtime-evm"
version = "0.1.0"
edition = "2021"
description = "Ethereum Virtual Machine runtime for Catalyst Network"
license = "MIT OR Apache-2.0"
authors = ["Catalyst Team"]
repository = "https://github.com/catalyst-network/catalyst-node-rust"
documentation = "https://docs.rs/catalyst-runtime-evm"
readme = "README.md"
keywords = ["blockchain", "evm", "ethereum", "catalyst", "runtime"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
# Core Catalyst dependencies
catalyst-core = { path = "../catalyst-core" }
catalyst-utils = { path = "../catalyst-utils" }

# EVM implementation - use compatible versions
revm = { version = "3.5", default-features = false, features = ["std", "serde"] }
revm-primitives = { version = "1.3", default-features = false, features = ["std", "serde"] }

# Cryptographic functions
sha3 = "0.10"

# Async support
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.0"
env_logger = "0.10"

[features]
default = ["std"]
std = ["revm/std", "revm-primitives/std"]
dev-examples = []
integration-tests = []

# Optional features for advanced functionality
optimism = ["revm/optimism"]
ethereum-tests = []
debug-mode = []

# Catalyst-specific features
cross-runtime = []
confidential-tx = []
dfs-integration = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "deploy_contract"
path = "examples/deploy_contract.rs"
test = false
required-features = ["never-build-examples"] 