[package]
name = "catalyst-runtime-evm"
version = "0.1.0"
edition = "2021"
description = "Ethereum Virtual Machine runtime for Catalyst Network"
license = "MIT OR Apache-2.0"
authors = ["Catalyst Team"]
repository = "https://github.com/catalyst-network/catalyst-node-rust"
documentation = "https://docs.rs/catalyst-runtime-evm"
readme = "README.md"
keywords = ["blockchain", "evm", "ethereum", "catalyst", "runtime"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
# Core Catalyst dependencies
catalyst-core = { path = "../catalyst-core", optional = true }

# Use alloy primitives for Ethereum types
alloy-primitives = { version = "1.2", features = ["serde"] }

# Cryptographic functions
sha3 = "0.10"
sha2 = "0.10"
keccak-hash = "0.10"

# Async support
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.0"
env_logger = "0.10"

[features]
default = ["std"]
std = []

# Optional features for advanced functionality
ethereum-tests = []
debug-mode = []

# Catalyst-specific features
cross-runtime = []
confidential-tx = []
dfs-integration = []
catalyst-core-integration = ["catalyst-core"]

[[bench]]
name = "evm_execution"
harness = false

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["ethereum-tests"]

# Remove examples for now to avoid missing file errors
# We'll add them back once the basic structure works

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "deploy_contract"
path = "examples/deploy_contract.rs"
required-features = ["ethereum-tests"]

[[example]]
name = "simple_transfer"
path = "examples/simple_transfer.rs"
required-features = ["ethereum-tests"]

[[example]]
name = "batch_execution"
path = "examples/batch_execution.rs"
required-features = ["ethereum-tests"]

[[example]]
name = "cross_runtime_call"
path = "examples/cross_runtime_call.rs"
required-features = ["ethereum-tests"]