[package]
name = "catalyst-service-bus"
version = "0.1.0"
edition = "2021"
authors = ["Catalyst Network Team"]
description = "Web2 integration layer for Catalyst Network - WebSocket event streaming and REST APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/catalyst-network/catalyst-node-rust"

[dependencies]
# Core Catalyst dependencies
catalyst-utils = { path = "../catalyst-utils" }
catalyst-config = { path = "../catalyst-config" }
catalyst-network = { path = "../catalyst-network" }
catalyst-storage = { path = "../catalyst-storage" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws", "json", "query"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"

# Rate limiting
governor = "0.6"

# Authentication
jsonwebtoken = "9.2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
env_logger = "0.10"

[features]
default = ["rest-api", "websocket"]
rest-api = []
websocket = []
metrics = ["catalyst-utils/metrics"]

[[example]]
name = "basic_client"
path = "examples/basic_client.rs"

[[example]]
name = "server"
path = "examples/server.rs"