[package]
name = "catalyst-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer for Catalyst Network with DFS integration"
license = "MIT OR Apache-2.0"

[dependencies]
catalyst-core = { path = "../catalyst-core" }
catalyst-crypto = { path = "../catalyst-crypto" }

# Database backends
rocksdb = "0.21"
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Async support
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"