[package]
name = "catalyst-storage"
version = "0.1.0"
edition = "2021"
authors = ["Catalyst Network Team"]
description = "Storage layer for Catalyst Network with RocksDB integration and state management"
license = "MIT"
repository = "https://github.com/catalyst-network/catalyst-node-rust"

[dependencies]
# Core Catalyst dependencies
catalyst-utils = { path = "../catalyst-utils" }
blake3 = "1.5"
hex = "0.4"

# Storage backend
rocksdb = { workspace = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[[bench]]
name = "storage_benchmarks"
harness = false

[features]
default = ["metrics"]
metrics = ["prometheus"]
testing = []
